Cambios title SEO

--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
     <!-- Color Barra Direcciones-->
     <meta name="theme-color" content="#cdb8e0">
     <!-- Title and SEO-->
-    <title>Impulsar - Inicio</title>
-    <meta name="description" content="Somos IMPULSAR, un equipo de desarrolladores de soluciones. Diseño y desarrollo de modelo de negocios, diseño gráfico, diseño y desarrollo web, marketing digital, páginas web, redes sociales."/>
-    <meta name="keywords" content="Desarrollo de soluciones. Diseño y desarrollo de modelo de negocios, diseño gráfico, diseño y desarrollo web, marketing digital, páginas web, landing pages, páginas corporativas, empresas, marca, negocios, potenciar, impulsar, impulsarte en el mercado, destacar en el mercado, redes sociales, community manager, planes a tu medida, planes de pago, facilidades de pago."/>
+    <title>IMPULSAR Dev Solutions | Desarrollamos soluciones 🚀</title>
+    <meta name="description" content="Identidad de marca, diseño gráfico, diseño y desarrollo web, marketing digital, redes sociales, asesoramiento jurídico y financiero. Llevamos tu empresa al siguiente nivel"/>
+    <meta name="keywords" content="Desarrollo de soluciones. Diseño y desarrollo de modelo de negocios, diseño gráfico, diseño y desarrollo web, marketing digital, páginas web, landing pages, páginas corporativas, empresas, marca, negocios, potenciar, impulsar, impulsarte en el mercado, destacar en el mercado, redes sociales, community manager, planes a tu medida, planes de pago, facilidades de pago. Soluciones. Comunity Manager. Fotografía. Asesoramiento jurídico y financiero"/>
     <!-- Estilos-->
     <link rel="stylesheet" href="./CSS/normalize.css">
     <link rel="stylesheet" href="./CSS/main.css" />
@@ -64,7 +64,7 @@
         <div id="particles-js" class="particles"></div>
         <div id="contenedor_logo_header" class="contenedor_logo_header">
           <a class="anchord_logo" href="index.html">
-            <img loading="lazy" class="logo_header" src="./assets/composiciones del logo/COMPOSICION1_LOGO/PNG/LOGO_EN GRIS CLARO-01-recortado.png" alt="Logo Impulsar Dev Solutions">
+            <img loading="lazy" class="logo_header" src="./assets/composiciones del logo/COMPOSICION1_LOGO/PNG/LOGO_EN GRIS CLARO-01-recortado.png" alt="Impulsar Dev Solutions">
           </a>
         </div>
         <input type="checkbox" id="toggler">
