--- a/pages/visual.html
+++ b/pages/visual.html
@@ -31,7 +31,7 @@
         <!-- Color Barra Direcciones-->
         <meta name="theme-color" content="#cdb8e0">
         <!-- Title and SEO-->
-        <title>Impulsar - Impulso de Identidad Visual</title>
+        <title>IMPULSAR Dev Solutions | Diseño gráfico para tu empresa</title>
         <meta name="description" content="Impulsá el diseño gráfico de tu marca con un estilo profesional que se identifique con la historia de tu marca para que destaques en el mercado"/>
         <meta name="keywords" content="Desarrollo de soluciones. Diseño y desarrollo de modelo de negocios, diseño gráfico, diseño y desarrollo web, marketing digital, páginas web, landing pages, páginas corporativas, empresas, marca, negocios, potenciar, impulsar, impulsarte en el mercado, destacar en el mercado, redes sociales, community manager, planes a tu medida, planes de pago, facilidades de pago. "/>
         <!-- Estilos-->
