--- a/index.html
+++ b/index.html
@@ -43,7 +43,6 @@
     <link href="https://fonts.googleapis.com/css2?family=Fugaz+One&display=swap" rel="stylesheet">
     <!-- Analytics-->
     <!-- Global site tag (gtag.js) - Google Analytics -->
-    <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-W2H4089REM"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
@@ -222,10 +221,7 @@
               </div>
             </div>
           </div>
-        </article>
-<!--         <div class="asesorate_container">
-          <a href="#sectionContacto" class="asesorate_btn">Pack Camino Digital</a>          
-        </div>  -->       
+        </article>       
         <h3 class="h3 carousel_title wow animate__animated animate__fadeInLeft">MÁS SERVICIOS</h3>
         <article class="carousel_article">
           <div class="swiper mySwiper carousel_container">
@@ -299,20 +295,6 @@
                           </div>
                       </div>
                   </div>
-<!--                   <div id="card" class="swiper-slide card">
-                      <div class="dp">
-                          <h3 class="card_title">SERVICIO</h3>
-                      </div>
-                      <div class="card_content">
-                          <p class="card_paragraph">
-                              descripcion servicio
-                          </p>
-                          <div class="contenedor_btn_card">
-                              <a href="#" class="btn_card">Consultar</a>          
-                          </div>
-                      </div>
-                  </div> -->
-                  <!-- <div class="swiper-pagination"></div> -->
               </div>
               <div class="swiper-button-next"></div>
               <div class="swiper-button-prev"></div>
@@ -591,26 +573,21 @@
             <!-- <h3 class="h3">DATOS DE CONTACTO</h3> -->
             <div class="mb-3 separador-leve contenedor_inputs">
                 <label for="email" name="_replyto" class="form-label">Email</label>
-                <input class="section__formulario__contenedor__form-input" type="email" name="mail" placeholder="Ejemplo: contacto@impulsardev.com.ar" id="correo" required><br>
+                <input class="section__formulario__contenedor__form-input" type="email" name="mail" id="email" placeholder="Ejemplo: contacto@impulsardev.com.ar" required><br>
             </div>
             <div class="mb-3 separador-leve contenedor_inputs">
-                <label for="nombre" class="form-label">Nombre</label>
-                <input class="section__formulario__contenedor__form-input" type="text" name="nombre" placeholder="Escribe tus nombres" required><br>
+                <label for="name" class="form-label">Nombre</label>
+                <input class="section__formulario__contenedor__form-input" type="text" name="nombre" id="name" placeholder="Escribe tus nombres" required><br>
             </div>
             <div class="mb-3 separador-leve contenedor_inputs">
-                <label for="telefono" class="form-label">Teléfono</label>
-                <input class="section__formulario__contenedor__form-input" type="tel" name="telefono" placeholder="+549 261 6307131"><br>
+                <label for="telephone" class="form-label">Teléfono</label>
+                <input class="section__formulario__contenedor__form-input" type="tel" name="telefono" id="telephone" placeholder="+549 261 6307131"><br>
             </div>
-<!--             <div class="mb-3 form-check contenedor_checkbox">
-                <input type="checkbox" class="form-check-input" id="formCheck" required>
-                <label class="form-check-label" for="formCheck">Acepto los términos y condiciones</label>
-            </div> -->
           </div>
           <div id="formularioContenedorTextarea" class="formulario_contenedor_textarea">  
             <h3 class="h3">¡ENVÍANOS TU MENSAJE!</h3>
             <div class="mb-3 contenedor_inputs">
-<!--                 <label for="consulta" class="form-label">¡Preguntanos!</label>
- -->                <textarea class="form-control" placeholder="En breve te respondemos 😉" name="message" id="mensaje" rows="3" required></textarea>
+                <textarea class="form-control" placeholder="En breve te respondemos 😉" name="message" id="mensaje" rows="3" required></textarea>
             </div>
             <div id="contenedorBotonFormulario" class="contenedor_btn_formulario">
               <button type="submit" class="btn btn_formulario">Enviar mensaje</button>
@@ -634,7 +611,7 @@
                   <!-- Contenedor footer logo -->
                   <div class="container">
                       <!-- Footer Logo -->                         
-                      <a class="footer__logo" href="">
+                      <a class="footer__logo" href="index.html">
                           <img loading="lazy" src="./assets/composiciones del logo/COMPOSICION1_LOGO/PNG/LOGO_EN GRIS CLARO-01-recortado.png" alt="Logo Impulsar Dev Solutions" class="footer__logo">
                       </a>
                   </div>
@@ -717,13 +694,7 @@
     </footer>     
     <!-- Scripts propios-->
     <script type="text/javascript" src="./js/hiddenNav.js"></script>
-<<<<<<< HEAD
-    <script type="text/javascript" src="./js/anchordNavIndex.js"></script>
-    <!-- Hotjar -->
-    <script src="./js/hotjar.js"></script>
-=======
     <script type="text/javascript" src="./js/anchordNavIndex.js"></script>  
->>>>>>> 2c9452827797246cdf31b08120a71bfce88d0bb1
     <!-- Script Bootstrap-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <!-- Swipper-->
