--- a/pages/marca.html
+++ b/pages/marca.html
@@ -256,15 +256,15 @@
                         <div id="formularioContenedorDatos" class="formulario_contenedor_datos">
                             <div class="mb-3 separador-leve contenedor_inputs">
                                 <label for="email" name="_replyto" class="form-label">Email</label>
-                                <input class="section__formulario__contenedor__form-input" type="email" name="mail" placeholder="Ejemplo: contacto@impulsardev.com.ar" id="correo" required><br>
+                                <input class="section__formulario__contenedor__form-input" type="email" id="email" name="mail" placeholder="Ejemplo: contacto@impulsardev.com.ar" required><br>
                             </div>
                             <div class="mb-3 separador-leve contenedor_inputs">
-                                <label for="nombre" class="form-label">Nombre</label>
-                                <input class="section__formulario__contenedor__form-input" type="text" name="nombre" placeholder="Escribe tus nombres" required><br>
+                                <label for="name" class="form-label">Nombre</label>
+                                <input class="section__formulario__contenedor__form-input" type="text" id="name" name="nombre" placeholder="Escribe tus nombres" required><br>
                             </div>
                             <div class="mb-3 separador-leve contenedor_inputs">
-                                <label for="telefono" class="form-label">Teléfono</label>
-                                <input class="section__formulario__contenedor__form-input" type="tel" name="telefono" placeholder="+549 2616307131"><br>
+                                <label for="telephone" class="form-label">Teléfono</label>
+                                <input class="section__formulario__contenedor__form-input" type="tel" id="telephone" name="telefono" placeholder="+549 2616307131"><br>
                             </div>
                             </div>
                             <div id="formularioContenedorTextarea" class="formulario_contenedor_textarea">  
