--- a/pages/marca.html
+++ b/pages/marca.html
@@ -54,6 +54,14 @@
             gtag('js', new Date());
             gtag('config', 'G-W2H4089REM');
         </script>
+            <!-- campaña -->
+    <!-- Google tag (gtag.js) --> 
+    <script async src="https://www.googletagmanager.com/gtag/js?id=AW-10980581678"></script> 
+    <script> window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'AW-10980581678'); 
+    </script>
+    <!-- Event snippet for Website sale conversion page --> 
+    <script> gtag('event', 'conversion', { 'send_to': 'AW-10980581678/ANZsCKyErdwDEK7C-fMo', 'transaction_id': '' }); 
+    </script>
     </head>
     <body>
         <header id="index_header" class="header">
