Changes in navbar & Impulso Web

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         <div id="contenedorHeaderSecciones" class="contenedor_header_secciones">
           <ul id="navList" class="list">
             <li><a id="anchordNavInicio" class="anchord_secciones" href="#">Inicio</a></li>
-            <li><a id="anchordNavServicios" class="anchord_secciones" href="#sectionServicios">¿Cómo lo hacemos?</a></li>
+            <li><a id="anchordNavServicios" class="anchord_secciones" href="#sectionServicios">¿Qué hacemos?</a></li>
             <li><a id="anchordNavNosotros" class="anchord_secciones" href="#sectionNosotros">¿Quiénes somos?</a></li>
             <li><a id="anchordNavContacto" class="anchord_secciones" href="#sectionContacto">Contacto</a></li>
             <div class="socialMedia">
