--- a/pages/visual.html
+++ b/pages/visual.html
@@ -73,7 +73,7 @@
                 <div id="contenedorHeaderSecciones" class="contenedor_header_secciones">
                     <ul id="navList" class="list">
                     <li><a id="anchordNav" class="anchord_secciones" href="../index.html#index_header">Inicio</a></li>
-                    <li><a id="anchordNav" class="anchord_secciones" href="../index.html#sectionServicios">¿Qué ofrecemos?</a></li>
+                    <li><a id="anchordNav" class="anchord_secciones" href="../index.html#sectionServicios">¿Qué hacemos?</a></li>
                     <li><a id="anchordNav" class="anchord_secciones" href="../index.html#sectionNosotros">¿Quiénes somos?</a></li>
                     <li><a id="anchordNav" class="anchord_secciones" href="../index.html#sectionContacto">Contacto</a></li>
                     <div class="socialMedia">
