--- a/pages/web.html
+++ b/pages/web.html
@@ -73,7 +73,7 @@
                 <div id="contenedorHeaderSecciones" class="contenedor_header_secciones">
                     <ul id="navList" class="list">
                     <li><a id="anchordNav" class="anchord_secciones" href="../index.html#index_header">Inicio</a></li>
-                    <li><a id="anchordNav" class="anchord_secciones" href="../index.html#sectionServicios">¿Cómo lo hacemos?</a></li>
+                    <li><a id="anchordNav" class="anchord_secciones" href="../index.html#sectionServicios">¿Qué hacemos?</a></li>
                     <li><a id="anchordNav" class="anchord_secciones" href="../index.html#sectionNosotros">¿Quiénes somos?</a></li>
                     <li><a id="anchordNav" class="anchord_secciones" href="../index.html#sectionContacto">Contacto</a></li>
                     <div class="socialMedia">
@@ -106,7 +106,7 @@
                         IMPULSO WEB
                     </h1>
                     <p class="h5 masServicios_intro_paragraph">
-                        DESARROLLÁ LA PÁGINA WEB DE TU MARCA Y DALE ESE IMPUSLO PARA DESTACAR EN EL MERCADO.
+                        DESARROLLÁ LA PÁGINA WEB DE TU MARCA Y DALE ESE IMPULSO PARA DESTACAR EN EL MERCADO.
                     </p>
                 </article>
                 <article id="masServiciosSpeachWeb" class="masServicios_speach">
