Changes copys in Impulso Web

--- a/pages/web.html
+++ b/pages/web.html
@@ -112,7 +112,7 @@
                 <article id="masServiciosSpeachWeb" class="masServicios_speach">
                     <div class="masServicios_brindamos">
                         <h2 class="h3 masServicios_title">
-                            VAS A LLEVARTE
+                            VAS A LLEVARTE UNA PÁGINA WEB
                         </h2>
                         <div class="beneficios">
                             <div class="beneficios_item">
@@ -122,7 +122,7 @@
                                     <span class="container_dots_span container_dots_span_3"></span>
                                     <span class="container_dots_span container_dots_span_4"></span>
                                 </div>
-                                <p class="beneficios_p">PÁGINA WEB DE DISEÑO</p>
+                                <p class="beneficios_p">DE DISEÑO</p>
                             </div>
                             <div class="beneficios_item">
                                 <div class="container_dots">
@@ -158,7 +158,7 @@
                                     <span class="container_dots_span container_dots_span_3"></span>
                                     <span class="container_dots_span container_dots_span_4"></span>
                                 </div>
-                                <p class="beneficios_p">MEDICIÓN DE TRÁFICO</p>
+                                <p class="beneficios_p">CON MEDICIÓN DE TRÁFICO</p>
                             </div>
                             <div class="beneficios_item">
                                 <div class="container_dots">
@@ -167,7 +167,7 @@
                                     <span class="container_dots_span container_dots_span_3"></span>
                                     <span class="container_dots_span container_dots_span_4"></span>
                                 </div>
-                                <p class="beneficios_p">CORREO PROFESIONAL</p>
+                                <p class="beneficios_p">SEO OPTIMIZADO</p>
                             </div> 
                             <div class="beneficios_item">
                                 <div class="container_dots">
@@ -176,7 +176,7 @@
                                     <span class="container_dots_span container_dots_span_3"></span>
                                     <span class="container_dots_span container_dots_span_4"></span>
                                 </div>
-                                <p class="beneficios_p">VISIBILIDAD EN GOOGLE MAPS</p>
+                                <p class="beneficios_p">PERSONALIZADA</p>
                             </div>                                                                                                
                         </div>
                     </div>
@@ -200,9 +200,9 @@
                             <p class="masServicios_speach_paragraph">
                                 ¡Y sólo es la primera herramienta! Te ofrecemos correos electrónicos profesionales, posicionamiento en Google Maps, herramientas de análisis y mediciones, dominio de tu marca, alojamiento personalizado para tu sitio, y servidores funcionando sin interrupciones.
                             </p>
-                            <p class="masServicios_speach_paragraph">
+                   <!--          <p class="masServicios_speach_paragraph">
                                 ¿Pensás que todo esto tiene un costo alto? Generalmente sí, pero nuestra misión es IMPULSAR a los emprendimientos y marcas. Por eso nuestros precios son increíblemente bajos, y por si fuera poco, también brindamos distintas facilidades. Como tus sitios web, nos adaptamos a tus medidas y posibilidades.
-                            </p>
+                            </p> -->
                             <p class="masServicios_speach_paragraph">
                                 Animate al mundo web y agendá un encuentro con nuestro equipo de profesionales.
                             </p>
