Etiqueta contacto conversión

--- a/index.html
+++ b/index.html
@@ -73,6 +73,16 @@
     <!-- Event snippet for Website sale conversion page --> 
     <script> gtag('event', 'conversion', { 'send_to': 'AW-10980581678/ANZsCKyErdwDEK7C-fMo', 'transaction_id': '' }); 
     </script>
+    <!--  Campaña etiqueta contacto -->
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=AW-10980581678"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'AW-10980581678');
+    </script>
   </head>
   <body>
     <div class="background">
