New article in Impulso Web

--- a/pages/web.html
+++ b/pages/web.html
@@ -54,6 +54,8 @@
             gtag('js', new Date());
             gtag('config', 'G-W2H4089REM');
         </script>
+        <!-- styles add -->
+        <link rel="stylesheet" href="../CSS/impulsoweb.css">
     </head>
     <body>
         <header id="index_header" class="header">
@@ -108,6 +110,50 @@
                     <p class="h5 masServicios_intro_paragraph">
                         DESARROLLÁ LA PÁGINA WEB DE TU MARCA Y DALE ESE IMPULSO PARA DESTACAR EN EL MERCADO.
                     </p>
+                </article>
+                <article class="article-services-web">
+                    <div class="images-container">
+                        <div class="image-box" key='landing'>
+                            <img src="../assets/img/web/landing.gif" class="web-image" alt="Landing Page" />
+                            <div class="content">
+                                <p class="title">Landing Page</p>
+                                <p class="description">
+                                    Página web diseñada para convertir visitantes en clientes potenciales y lograr una acción específica
+                                </p>
+                                <a class="btn" href="https://api.whatsapp.com/send?phone=5492616307131" target="_blank">
+                                    Pedir Presupuesto
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="images-container">
+                        <div class="image-box" key='siteweb'>
+                            <img src="../assets/img/web/sitioweb.gif" class="web-image" alt="Sitio Web" />
+                            <div class="content">
+                                <p class="title">Sitio Web</p>
+                                <p class="description">
+                                    Un sitio web es una plataforma en línea donde se muestra y comparte contenido, y permite la interacción con los usuarios.
+                                </p>
+                                <a class="btn" href="https://api.whatsapp.com/send?phone=5492616307131" target="_blank">
+                                    Pedir Presupuesto
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="images-container">
+                        <div class="image-box" key='ecommerce'>
+                            <img src="../assets/img/web/e-commerce.gif" class="web-image" alt="Ecommerce" />
+                            <div class="content">
+                                <p class="title">E-commerce</p>
+                                <p class="description">
+                                    Sitio web de comercio electrónico. Compra y venta online de forma segura.
+                                </p>
+                                <a class="btn" href="https://api.whatsapp.com/send?phone=5492616307131" target="_blank">
+                                    Pedir Presupuesto
+                                </a>
+                            </div>
+                        </div>
+                    </div>
                 </article>
                 <article id="masServiciosSpeachWeb" class="masServicios_speach">
                     <div class="masServicios_brindamos">
