--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
     <!-- Estilos-->
     <link rel="stylesheet" href="./CSS/normalize.css">
     <link rel="stylesheet" href="./CSS/main.css" />
+    <link rel="stylesheet" href="./CSS/submenu.css">
     <!-- Tipografía-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -107,6 +108,23 @@
             <li><a id="anchordNavServicios" class="anchord_secciones" href="#sectionServicios">¿Qué hacemos?</a></li>
             <li><a id="anchordNavNosotros" class="anchord_secciones" href="#sectionNosotros">¿Quiénes somos?</a></li>
             <li><a id="anchordNavContacto" class="anchord_secciones" href="#sectionContacto">Contacto</a></li>
+            <!-- servicios -->
+            <li>
+              <div class="li-servicios" id="li-servicios-container">
+                <a id="anchordNavServicios" class="anchord_secciones" href="#">Servicios</a>
+                <ul class="submenu" id="submenu">
+                  <li><a href="./pages/web.html" class="anchord_secciones">Sitios web & E-Commerce</a></li>
+                  <li><a href="./pages/marca.html" class="anchord_secciones">Identidad de marca</a></li>
+                  <li><a href="./pages/visual.html" class="anchord_secciones">Diseño gráfico</a></li>
+                  <li><a href="./pages/camino.html" class="anchord_secciones">Pack Camino Digital</a></li>
+                  <!-- 
+                  <li><a href="#" class="anchord_secciones">Community Manager</a></li>
+                  <li><a href="#" class="anchord_secciones">Marketing Digital</a></li> 
+                  -->
+                </ul>
+              </div>
+            </li>
+            <!-- social media -->
             <div class="socialMedia">
               <!-- Facebook -->
               <a href="https://www.facebook.com/Impulsardev/" type="button" class="socialMedia_anchord" target="_blank">
@@ -214,7 +232,7 @@
             <div id="containerParagraphImpulsoWeb" class="container_impulso_speach">
               <h3 class=" h3 impulso_title">IMPULSO WEB</h3>
               <p class="impulso_paragraph">
-                Desarrollá la página web de tu marca y dale ese impulso para destacar en el mercado.
+                Desarrollá el sitio web o E-Commerce de tu marca y dale ese impulso para destacar en el mercado.
               </p>
             </div>
             <div class="contenedor_btns">
@@ -606,17 +624,17 @@
             </div>
             <div class="mb-3 separador-leve contenedor_inputs">
                 <label for="name" class="form-label">Nombre</label>
-                <input class="section__formulario__contenedor__form-input" type="text" name="nombre" id="name" placeholder="Escribe tus nombres" required><br>
+                <input class="section__formulario__contenedor__form-input" type="text" name="nombre" id="name" placeholder="Escribe tus nombres" required min="3"><br>
             </div>
             <div class="mb-3 separador-leve contenedor_inputs">
                 <label for="telephone" class="form-label">Teléfono</label>
-                <input class="section__formulario__contenedor__form-input" type="tel" name="telefono" id="telephone" placeholder="+549 261 6307131"><br>
+                <input class="section__formulario__contenedor__form-input" type="tel" name="telefono" id="telephone" placeholder="+549 261 6307131" min="9"><br>
             </div>
           </div>
           <div id="formularioContenedorTextarea" class="formulario_contenedor_textarea">  
             <h3 class="h3">¡ENVÍANOS TU MENSAJE!</h3>
             <div class="mb-3 contenedor_inputs">
-                <textarea class="form-control" placeholder="En breve te respondemos 😉" name="message" id="mensaje" rows="3" required></textarea>
+                <textarea class="form-control" placeholder="En breve te respondemos 😉" name="message" id="mensaje" rows="3" required minlength="30"></textarea>
             </div>
             <div id="contenedorBotonFormulario" class="contenedor_btn_formulario">
               <button type="submit" class="btn btn_formulario">Enviar mensaje</button>
@@ -743,6 +761,7 @@
         }
       );
     </script>
-        <script type="text/javascript" src="./js/cambioNavbar.js"></script>  
+    <script type="text/javascript" src="./js/cambioNavbar.js"></script>  
+    <script type="text/javascript" src="./js/submenu.js"></script>  
   </body>
 </html>
