--- a/pages/web.html
+++ b/pages/web.html
@@ -157,7 +157,7 @@
                         IMPULSO WEB
                     </h1>
                     <p class="h5 masServicios_intro_paragraph">
-                        DESARROLLÁ LA PÁGINA WEB DE TU MARCA Y DALE ESE IMPULSO PARA DESTACAR EN EL MERCADO.
+                        DESARROLLÁ EL SITIO WEB O E-COMMERCE DE TU MARCA Y DALE ESE IMPULSO PARA DESTACAR EN EL MERCADO.
                     </p>
                 </article>
                 <article class="article-services-web">
